package edu.fiuba.algo3.modelo;

public interface Comprable {
    void comprar(/*Monto monto*/);

    String obtenerNombre();

    String obtenerRutaBase();
}
