package edu.fiuba.algo3.modelo.puntaje;

public interface Puntuador {
    Puntaje obtenerPuntaje(Puntaje puntajeBase);
}
